@@ -1,3 +1,7 @@
+2008-08-18  Laurent Debacker <debackerl@gmail.com> 
+
+	* MainWindow.cs: Updated sample for key tips.
+
 2008-08-15  Laurent Debacker <debackerl@gmail.com> 
 
 	* MainWindow.cs: Updated the main sample to integrate the sample developed
